--- a/src/main/resources/vm/manage/projectInfo.vm
+++ b/src/main/resources/vm/manage/projectInfo.vm
@@ -35,8 +35,68 @@
            lay-text="运行中|未运行">
 </script>
 
+<script>
+    const HSL = [];
+
+    function randomHsl() {
+        var H = Math.random();
+        var S = Math.random();
+        var L = Math.random();
+        return [H, S, L];
+    }
+
+    // 获取HSL数组
+    function getHslArray(hslLength) {
+        if (HSL.length >= hslLength) {
+            return;
+        }
+        for (var i = 0; i < hslLength - HSL.length; i++) {
+            var ret = this.randomHsl();
+
+            // 颜色相邻颜色差异须大于 0.25
+            if (i > 0 && Math.abs(ret[0] - HSL[i - 1][0]) < 0.25) {
+                i--;
+                continue; // 重新获取随机色
+            }
+            ret[1] = 0.7 + (ret[1] * 0.2); // [0.7 - 0.9] 排除过灰颜色
+            ret[2] = 0.4 + (ret[2] * 0.4); // [0.4 - 0.8] 排除过亮过暗色
+
+            // 数据转化到小数点后两位
+            ret = ret.map(function (item) {
+                return parseFloat(item.toFixed(2));
+            });
+            HSL.push(ret);
+        }
+    }
+
+    function hslToRgb(H, S, L) {
+        var R, G, B;
+        if (+S === 0) {
+            R = G = B = L; // 饱和度为0 为灰色
+        } else {
+            var hue2Rgb = function (p, q, t) {
+                if (t < 0) t += 1;
+                if (t > 1) t -= 1;
+                if (t < 1 / 6) return p + (q - p) * 6 * t;
+                if (t < 1 / 2) return q;
+                if (t < 2 / 3) return p + (q - p) * (2 / 3 - t) * 6;
+                return p;
+            };
+            var Q = L < 0.5 ? L * (1 + S) : L + S - L * S;
+            var P = 2 * L - Q;
+            R = hue2Rgb(P, Q, H + 1 / 3);
+            G = hue2Rgb(P, Q, H);
+            B = hue2Rgb(P, Q, H - 1 / 3);
+        }
+        return [Math.round(R * 255), Math.round(G * 255), Math.round(B * 255)];
+    }
+
+
+</script>
+
 <script type="text/javascript">
     var table;
+    var groupMap = new Map();
     layui.use(['layer', 'element', 'table', 'form'], function () {
         var $ = layui.$;
         table = layui.table;
@@ -53,7 +113,14 @@
                 {field: 'name', title: '项目名称', width: '15%'},
                 {
                     title: 'lib状态', width: '10%', templet: function (d) {
-                        return (d.runLibDesc || "") + " / " + (d.useLibDesc || "");
+                        var size = groupMap.size;
+                        if (!groupMap.get(d.group)) {
+                            groupMap.set(d.group, "1");
+                            size += 1;
+                            getHslArray(size);
+                        }
+                        var rgb = hslToRgb.apply(this, HSL[size - 1]);
+                        return "<div  title='" + d.group + "' style='background: rgb(" + rgb + ");color: #fff;margin: 0 -15px;padding: 0 15px;'>" + (d.runLibDesc || "") + " / " + (d.useLibDesc || "") + "</div>";
                     }
                 },
                 {field: 'createTime', title: '创建时间', width: '13%'},
@@ -66,7 +133,6 @@
                 statusCode: 200
             },
             done: function (data) {
-                console.log(data);
             }
         });
 
