--- a/src/main/resources/vm/manage/projectInfo.vm
+++ b/src/main/resources/vm/manage/projectInfo.vm
@@ -47,14 +47,15 @@
 
     // 获取HSL数组
     function getHslArray(hslLength) {
+        var allLen = HSL.length;
         if (HSL.length >= hslLength) {
             return;
         }
-        for (var i = 0; i < hslLength - HSL.length; i++) {
+        for (var i = 0; i < hslLength - allLen; i++) {
             var ret = this.randomHsl();
 
             // 颜色相邻颜色差异须大于 0.25
-            if (i > 0 && Math.abs(ret[0] - HSL[i - 1][0]) < 0.25) {
+            if (allLen > 0 && Math.abs(ret[0] - HSL[allLen - 1][0]) < 0.25) {
                 i--;
                 continue; // 重新获取随机色
             }
@@ -90,8 +91,6 @@
         }
         return [Math.round(R * 255), Math.round(G * 255), Math.round(B * 255)];
     }
-
-
 </script>
 
 <script type="text/javascript">
@@ -113,13 +112,16 @@
                 {field: 'name', title: '项目名称', width: '15%'},
                 {
                     title: 'lib状态', width: '10%', templet: function (d) {
-                        var size = groupMap.size;
-                        if (!groupMap.get(d.group)) {
-                            groupMap.set(d.group, "1");
-                            size += 1;
-                            getHslArray(size);
+                        var rgb;
+                        if (d.group) {
+                            var size = groupMap.size;
+                            if (!groupMap.get(d.group)) {
+                                groupMap.set(d.group, "1");
+                                size += 1;
+                                getHslArray(size);
+                            }
+                            rgb = hslToRgb.apply(this, HSL[size - 1]);
                         }
-                        var rgb = hslToRgb.apply(this, HSL[size - 1]);
                         return "<div  title='" + d.group + "' style='background: rgb(" + rgb + ");color: #fff;margin: 0 -15px;padding: 0 15px;'>" + (d.runLibDesc || "") + " / " + (d.useLibDesc || "") + "</div>";
                     }
                 },
