--- a/src/main/resources/vm/manage/projectInfo.vm
+++ b/src/main/resources/vm/manage/projectInfo.vm
@@ -122,7 +122,7 @@
                             }
                             rgb = hslToRgb.apply(this, HSL[size - 1]);
                         }
-                        return "<div  title='" + d.group + "' style='background: rgb(" + rgb + ");color: #fff;margin: 0 -15px;padding: 0 15px;'>" + (d.runLibDesc || "") + " / " + (d.useLibDesc || "") + "</div>";
+                        return "<div  title='" + d.group + "(" + d.id + ")" + "' style='background: rgb(" + rgb + ");color: #fff;margin: 0 -15px;padding: 0 15px;'>" + (d.runLibDesc || "") + " / " + (d.useLibDesc || "") + "</div>";
                     }
                 },
                 {field: 'createTime', title: '创建时间', width: '13%'},
@@ -235,7 +235,7 @@
                     title: '内存',
                     shade: 0.8,
                     area: ['60%', '50%'],
-                    content: 'internal?tag=' + data.tag
+                    content: 'internal?tag=' + data.id
                 });
             }
         });
@@ -263,7 +263,9 @@
     });
 
     function reloadTable() {
-        table.reload('table_project', {height: 'full-52'});
+        table.reload('table_project', {
+            height: 'full-52'
+        });
     }
 </script>
 </html>
