修改登录也样式

--- a/src/main/resources/vm/index.vm
+++ b/src/main/resources/vm/index.vm
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>项目管理系统</title>
+    <title>Jpom-项目管理系统</title>
     #parse("./common/head.vm")
     <link rel="stylesheet" href="/static/css/index.css">
 </head>
@@ -17,7 +17,7 @@
                     $user.name
                 </a>
                 <dl class="layui-nav-child">
-                    <dd id="updatePwd"><a href="javascript:;"  op="updatePwd">修改密码</a></dd>
+                    <dd id="updatePwd"><a href="javascript:;" op="updatePwd">修改密码</a></dd>
                 </dl>
             </li>
             <li class="layui-nav-item" id="li-exit">
@@ -125,7 +125,7 @@
 
         // 用户操作
         element.on('nav(userOperation)', function (elem) {
-            var op =   this.getAttribute('op');
+            var op = this.getAttribute('op');
             // 修改密码
             if ('updatePwd' == op) {
                 document.getElementById('form_updatePwd').reset();
