--- a/src/main/resources/vm/login.vm
+++ b/src/main/resources/vm/login.vm
@@ -3,15 +3,21 @@
 
 <head>
     #parse("./common/head.vm")
-    <title>项目管理系统</title>
+    <title>Jpom-项目管理系统</title>
+    <style>
+        .auto {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
 <div class="layui-carousel" id="div-carousel" style="width: 100%; height: 100%; position: fixed; z-index: 0;">
     <div carousel-item>
-        <div><img src="/static/backgrounds/1.jpg" style="width: 100%;"></div>
-        <div><img src="/static/backgrounds/2.jpg" style="width: 100%;"></div>
-        <div><img src="/static/backgrounds/3.jpg" style="width: 100%;"></div>
+        <div><img src="/static/backgrounds/1.jpg" class="auto"></div>
+        <div><img src="/static/backgrounds/2.jpg" class="auto"></div>
+        <div><img src="/static/backgrounds/3.jpg" class="auto"></div>
     </div>
 </div>
 <div class="layui-container" style="margin-top: 150px;">
