下载bug,项目修改和添加bug ...... 管理员才能创建项目

--- a/src/main/resources/vm/manage/filemanage.vm
+++ b/src/main/resources/vm/manage/filemanage.vm
@@ -110,7 +110,9 @@
                             url: '/file/clear',
                             type: 'POST',
                             dataType: 'json',
-                            data: {id: id},
+                            data: {
+                                id: id
+                            },
                             success: function (data) {
                                 if (200 === data.code) {
                                     layer.msg(data.msg);
