--- a/src/main/resources/vm/system/whitelistDirectory.vm
+++ b/src/main/resources/vm/system/whitelistDirectory.vm
@@ -16,7 +16,7 @@
     <form action="" class="layui-form" id="form_user">
         <div class="layui-form-item">
             <div class="layui-inline">
-                <label class="layui-form-label">昵称</label>
+                <label class="layui-form-label">白名单列表</label>
                 <div class="layui-input-block">
                     <textarea name="value" placeholder="请输入内容" class="layui-textarea">$!value</textarea>
                 </div>
@@ -31,21 +31,11 @@
 </div>
 </body>
 <script type="text/javascript">
-    layui.use(['form', 'carousel', 'layer'], function () {
+    layui.use(['form', 'layer'], function () {
         var $ = layui.$;
         var form = layui.form;
-        var carousel = layui.carousel;
         var layer = layui.layer;
 
-
-        carousel.render({
-            elem: '#div-carousel',
-            width: '100%',
-            height: '100%',
-            anim: 'fade',
-            arrow: 'none',
-            indicator: 'none'
-        });
 
         form.on('submit(formDemo)', function (data) {
             $.ajax({
