创建socket回话 优化、鉴权，添加用户创建人

--- a/src/main/resources/vm/manage/console.vm
+++ b/src/main/resources/vm/manage/console.vm
@@ -42,7 +42,7 @@
         var showLogDom = $('.console .terminal');
 
         if ('WebSocket' in window) {
-            var ws = new WebSocket("ws://" + window.location.host + "/console/" + userInfo);
+            var ws = new WebSocket("ws://" + window.location.host + "/console/" + userInfo + "/" + projectInfo.id);
 
             ws.onopen = function () {
                 showLogDom.append('WebSocket连接成功！<br/>');
