--- a/src/main/resources/vm/user/list.vm
+++ b/src/main/resources/vm/user/list.vm
@@ -117,6 +117,7 @@
                 {field: 'id', title: 'id'},
                 {field: 'name', title: '昵称'},
                 {field: 'manage', templet: "#manager_status", title: '是否是管理员'},
+                {field: 'parent', title: '创建人'},
                 {field: 'op', title: '操作', align: 'center', toolbar: '#bar_projects', fixed: 'right'}
             ]],
             loading: true,
